--- a/index.html
+++ b/index.html
@@ -245,6 +245,15 @@
     }
   </style>
 </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RZ6BHLY3QG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RZ6BHLY3QG');
+</script>
 <body>
   <header>
     <img src="Frame 7.png" alt="Company Logo">
